<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.authentication.LoginScreenActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@drawable/icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ivLogo"
            app:layout_constraintStart_toStartOf="@+id/ivLogo"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSlogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/slogan"
            android:textColor="@color/grayColor"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@+id/tvNameLabel"
            app:layout_constraintStart_toStartOf="@+id/tvNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvNameLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_28sdp"
            android:text="@string/email_address"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSlogan" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edt_bg"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/grayColor"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvEmail"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edt_bg"
            android:padding="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="@+id/edtEmail"
            app:layout_constraintStart_toStartOf="@+id/edtEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@null"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/grayColor"
                android:textSize="@dimen/_11ssp"
                android:maxLength="10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivTogglePassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivTogglePassword"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:src="@drawable/close_eye"
                android:tint="@color/grayColor"
                app:layout_constraintBottom_toBottomOf="@+id/edtPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edtPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/forgot_password"
            android:textColor="@color/blueColor"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/clPassword"
            app:layout_constraintTop_toBottomOf="@+id/clPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/btn_bg"
            android:padding="@dimen/_12sdp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="@+id/clPassword"
            app:layout_constraintStart_toStartOf="@+id/clPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

        <View
            android:id="@+id/viewLeft"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@color/lightGrayColor"
            app:layout_constraintBottom_toBottomOf="@+id/tvOrConnect"
            app:layout_constraintEnd_toStartOf="@+id/tvOrConnect"
            app:layout_constraintStart_toStartOf="@id/btnSignIn"
            app:layout_constraintTop_toTopOf="@+id/tvOrConnect" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOrConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_connect_with"
            android:textAllCaps="true"
            android:textColor="@color/grayColor"
            android:textSize="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
            app:layout_constraintStart_toStartOf="@+id/btnSignIn"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

        <View
            android:id="@+id/viewRight"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@color/lightGrayColor"
            app:layout_constraintBottom_toBottomOf="@+id/tvOrConnect"
            app:layout_constraintEnd_toEndOf="@id/btnSignIn"
            app:layout_constraintStart_toEndOf="@+id/tvOrConnect"
            app:layout_constraintTop_toTopOf="@+id/tvOrConnect" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clGoogle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_4sdp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/btn_google"
            app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
            app:layout_constraintStart_toStartOf="@+id/btnSignIn"
            app:layout_constraintTop_toBottomOf="@+id/tvOrConnect">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivGoogle"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_16sdp"
                android:foregroundGravity="center"
                android:src="@drawable/google"
                app:layout_constraintBottom_toBottomOf="@id/btnGoogle"
                app:layout_constraintEnd_toStartOf="@+id/btnGoogle"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btnGoogle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/google"
                android:padding="@dimen/_10sdp"
                android:textAllCaps="false"
                android:textColor="@color/googleColor"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivGoogle"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:id="@+id/llSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_14sdp"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/clGoogle"
            app:layout_constraintStart_toStartOf="@+id/clGoogle">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/grayColor"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvSingUp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSingUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:text="@string/sign_up"
                android:textColor="@color/blueColor"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvNoAccount"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>